package server

import (
	"context"
	"fmt"
	"sync"
	"sync/atomic"
	"time"

	"github.com/yairfalse/tapio/pkg/events/opinionated"
	"github.com/yairfalse/tapio/pkg/correlation"
	"github.com/yairfalse/tapio/pkg/monitoring"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// OpinionatedGRPCServer is optimized for our revolutionary opinionated data format
// It perfectly leverages the 11-context semantic enrichment for AI-ready correlation
type OpinionatedGRPCServer struct {
	opinionated.UnimplementedOpinionatedEventsServiceServer
	
	// Core processing engine optimized for opinionated events
	correlationEngine *correlation.PerfectEngine
	patternMatcher    *correlation.SemanticPatternMatcher
	aiProcessor       *correlation.AIReadyProcessor
	
	// High-performance event processing
	eventChan        chan *opinionated.OpinionatedEvent
	batchChan        chan *opinionated.OpinionatedBatch
	processingPool   *ProcessingPool
	
	// State management
	mu               sync.RWMutex
	activeConnections map[string]*ConnectionContext
	
	// Performance monitoring
	monitor          *monitoring.OpinionatedMonitor
	
	// Statistics optimized for our data format
	semanticEvents   uint64
	behavioralEvents uint64
	temporalEvents   uint64
	anomalyEvents    uint64
	correlatedEvents uint64
	aiFeatureEvents  uint64
	
	// Configuration optimized for opinionated data
	config *OpinionatedServerConfig
}

// OpinionatedServerConfig optimized for our perfect data format
type OpinionatedServerConfig struct {
	// Event processing configuration
	MaxEventBufferSize    int           `json:"max_event_buffer_size"`    // 500k events for our efficient format
	MaxBatchSize          int           `json:"max_batch_size"`           // 10k events per batch
	ProcessingWorkers     int           `json:"processing_workers"`       // CPU cores * 4 for our efficient processing
	
	// Correlation engine configuration for opinionated data
	CorrelationConfig struct {
		SemanticSimilarityThreshold  float32       `json:"semantic_similarity_threshold"`  // 0.85 for high precision
		BehavioralAnomalyThreshold   float32       `json:"behavioral_anomaly_threshold"`   // 0.7 for early detection
		TemporalCorrelationWindow    time.Duration `json:"temporal_correlation_window"`    // 5m for real-time correlation
		AIFeatureProcessingEnabled   bool          `json:"ai_feature_processing_enabled"`  // true for ML pipeline
		CausalityChainDepth         int           `json:"causality_chain_depth"`          // 10 for deep analysis
	}
	
	// Performance tuning for our efficient format
	Performance struct {
		TargetLatency               time.Duration `json:"target_latency"`                // <10ms for our optimized processing
		MaxMemoryGB                 float64       `json:"max_memory_gb"`                 // 2GB for correlation state
		AIFeatureCacheSize          int           `json:"ai_feature_cache_size"`         // 1M features cached
		SemanticEmbeddingCacheSize  int           `json:"semantic_embedding_cache_size"` // 500k embeddings
		PatternMatchingEnabled      bool          `json:"pattern_matching_enabled"`      // true for intelligent patterns
	}
}

// NewOpinionatedGRPCServer creates a server perfectly optimized for our data format
func NewOpinionatedGRPCServer(config *OpinionatedServerConfig) (*OpinionatedGRPCServer, error) {
	server := &OpinionatedGRPCServer{
		config:             config,
		eventChan:          make(chan *opinionated.OpinionatedEvent, config.MaxEventBufferSize),
		batchChan:          make(chan *opinionated.OpinionatedBatch, 1000),
		activeConnections:  make(map[string]*ConnectionContext),
	}
	
	// Initialize correlation engine optimized for opinionated events
	correlationEngine, err := correlation.NewPerfectEngine(&correlation.PerfectConfig{
		SemanticSimilarityThreshold: config.CorrelationConfig.SemanticSimilarityThreshold,
		BehavioralAnomalyThreshold:  config.CorrelationConfig.BehavioralAnomalyThreshold,
		TemporalWindow:              config.CorrelationConfig.TemporalCorrelationWindow,
		CausalityDepth:              config.CorrelationConfig.CausalityChainDepth,
		AIEnabled:                   config.CorrelationConfig.AIFeatureProcessingEnabled,
	})
	if err != nil {
		return nil, fmt.Errorf("failed to create perfect correlation engine: %w", err)
	}
	server.correlationEngine = correlationEngine
	
	// Initialize semantic pattern matcher
	patternMatcher, err := correlation.NewSemanticPatternMatcher(&correlation.SemanticConfig{
		EmbeddingDimension:     512,  // Standard semantic embedding size
		SimilarityThreshold:    0.85, // High precision for our quality data
		PatternCacheSize:       10000,
		OntogyTagsEnabled:      true, // Leverage our ontology tags
		IntentClassification:   true, // Use intent for smart correlation
	})
	if err != nil {
		return nil, fmt.Errorf("failed to create semantic pattern matcher: %w", err)
	}
	server.patternMatcher = patternMatcher
	
	// Initialize AI-ready processor
	aiProcessor, err := correlation.NewAIReadyProcessor(&correlation.AIConfig{
		DenseFeatureSize:       256,  // Optimized for our dense features
		SparseFeatureEnabled:   true, // Use our sparse features
		GraphFeaturesEnabled:   true, // Leverage graph neural features
		TimeSeriesEnabled:      true, // Process our time series features
		FeatureCacheSize:       config.Performance.AIFeatureCacheSize,
		EmbeddingCacheSize:     config.Performance.SemanticEmbeddingCacheSize,
	})
	if err != nil {
		return nil, fmt.Errorf("failed to create AI-ready processor: %w", err)
	}
	server.aiProcessor = aiProcessor
	
	// Initialize processing pool optimized for our data format
	server.processingPool = NewProcessingPool(&ProcessingPoolConfig{
		WorkerCount:        config.ProcessingWorkers,
		QueueSize:          config.MaxEventBufferSize,
		TargetLatency:      config.Performance.TargetLatency,
		OpinionatedOptimized: true, // Use our format-specific optimizations
	})
	
	// Initialize performance monitor
	server.monitor = monitoring.NewOpinionatedMonitor(&monitoring.OpinionatedConfig{
		TargetLatency:      config.Performance.TargetLatency,
		MaxMemoryGB:        config.Performance.MaxMemoryGB,
		MetricsEnabled:     true,
		SemanticMetrics:    true, // Track semantic enrichment metrics
		BehavioralMetrics:  true, // Track behavioral analysis metrics
		AIMetrics:          true, // Track AI feature processing metrics
	})
	
	return server, nil
}

// StreamOpinionatedEvents handles the high-performance streaming of our perfect data format
func (s *OpinionatedGRPCServer) StreamOpinionatedEvents(stream opinionated.OpinionatedEventsService_StreamOpinionatedEventsServer) error {
	ctx := stream.Context()
	
	// Create connection context optimized for opinionated data
	connCtx := &ConnectionContext{
		ID:              generateConnectionID(),
		StartTime:       time.Now(),
		Stream:          stream,
		Context:         ctx,
		
		// Metrics specific to opinionated data processing
		SemanticEventsReceived:   0,
		BehavioralEventsReceived: 0,
		TemporalEventsReceived:   0,
		AnomalyEventsReceived:    0,
		AIFeatureEventsReceived:  0,
	}
	
	// Register connection
	s.mu.Lock()
	s.activeConnections[connCtx.ID] = connCtx
	s.mu.Unlock()
	
	defer func() {
		s.mu.Lock()
		delete(s.activeConnections, connCtx.ID)
		s.mu.Unlock()
	}()
	
	// Process opinionated event stream with perfect optimization
	for {
		select {
		case <-ctx.Done():
			return ctx.Err()
			
		default:
			// Receive opinionated batch optimized for our format
			batch, err := stream.Recv()
			if err != nil {
				return status.Errorf(codes.Internal, "failed to receive opinionated batch: %v", err)
			}
			
			// Process batch with semantic intelligence
			if err := s.processOpinionatedBatch(ctx, batch, connCtx); err != nil {
				return status.Errorf(codes.Internal, "failed to process opinionated batch: %v", err)
			}
			
			// Send intelligent acknowledgment
			ack := &opinionated.OpinionatedAck{
				BatchId:             batch.Metadata.Id,
				ProcessedEvents:     int32(len(batch.Events)),
				SemanticInsights:    s.extractSemanticInsights(batch),
				BehavioralAnomalies: s.detectBehavioralAnomalies(batch),
				CorrelationHints:    s.generateCorrelationHints(batch),
				AIRecommendations:   s.generateAIRecommendations(batch),
			}
			
			if err := stream.Send(ack); err != nil {
				return status.Errorf(codes.Internal, "failed to send acknowledgment: %v", err)
			}
		}
	}
}

// processOpinionatedBatch processes a batch with full intelligence of our format
func (s *OpinionatedGRPCServer) processOpinionatedBatch(ctx context.Context, batch *opinionated.OpinionatedBatch, connCtx *ConnectionContext) error {
	startTime := time.Now()
	
	// Process each opinionated event with semantic awareness
	for _, event := range batch.Events {
		if err := s.processOpinionatedEvent(ctx, event, connCtx); err != nil {
			return fmt.Errorf("failed to process opinionated event %s: %w", event.Id, err)
		}
	}
	
	// Batch-level pattern detection using our format's batch patterns
	if err := s.processBatchPatterns(ctx, batch); err != nil {
		return fmt.Errorf("failed to process batch patterns: %w", err)
	}
	
	// Update performance metrics
	processingLatency := time.Since(startTime)
	s.monitor.RecordBatchProcessingLatency(processingLatency)
	s.monitor.RecordEventThroughput(len(batch.Events))
	
	// Ensure we meet our <10ms target latency
	if processingLatency > s.config.Performance.TargetLatency {
		s.monitor.RecordLatencyViolation(processingLatency)
	}
	
	return nil
}

// processOpinionatedEvent processes a single event leveraging all 11 contexts
func (s *OpinionatedGRPCServer) processOpinionatedEvent(ctx context.Context, event *opinionated.OpinionatedEvent, connCtx *ConnectionContext) error {
	// Update context-specific metrics
	s.updateContextMetrics(event, connCtx)
	
	// Semantic processing using our semantic context
	if event.Semantic != nil {
		if err := s.processSemanticContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process semantic context: %w", err)
		}
	}
	
	// Behavioral analysis using our behavioral context
	if event.Behavioral != nil {
		if err := s.processBehavioralContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process behavioral context: %w", err)
		}
	}
	
	// Temporal correlation using our temporal context
	if event.Temporal != nil {
		if err := s.processTemporalContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process temporal context: %w", err)
		}
	}
	
	// Anomaly detection using our anomaly context
	if event.Anomaly != nil {
		if err := s.processAnomalyContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process anomaly context: %w", err)
		}
	}
	
	// Correlation analysis using our correlation context
	if event.Correlation != nil {
		if err := s.processCorrelationContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process correlation context: %w", err)
		}
	}
	
	// AI feature processing using our AI features
	if event.AiFeatures != nil {
		if err := s.processAIFeatures(ctx, event); err != nil {
			return fmt.Errorf("failed to process AI features: %w", err)
		}
	}
	
	// Causality analysis using our causality context
	if event.Causality != nil {
		if err := s.processCausalityContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process causality context: %w", err)
		}
	}
	
	// Impact assessment using our impact context
	if event.Impact != nil {
		if err := s.processImpactContext(ctx, event); err != nil {
			return fmt.Errorf("failed to process impact context: %w", err)
		}
	}
	
	// Submit to correlation engine for perfect correlation
	return s.correlationEngine.ProcessOpinionatedEvent(ctx, event)
}

// Semantic processing leveraging our semantic context
func (s *OpinionatedGRPCServer) processSemanticContext(ctx context.Context, event *opinionated.OpinionatedEvent) error {
	atomic.AddUint64(&s.semanticEvents, 1)
	
	// Process semantic embedding for similarity matching
	if len(event.Semantic.Embedding) > 0 {
		s.patternMatcher.ProcessSemanticEmbedding(event.Id, event.Semantic.Embedding)
	}
	
	// Process ontology tags for intelligent categorization
	if len(event.Semantic.OntologyTags) > 0 {
		s.patternMatcher.ProcessOntologyTags(event.Id, event.Semantic.OntologyTags)
	}
	
	// Process intent classification for smart correlation
	if event.Semantic.Intent != "" && event.Semantic.IntentConfidence > 0.7 {
		s.correlationEngine.ProcessIntent(event.Id, event.Semantic.Intent, event.Semantic.IntentConfidence)
	}
	
	return nil
}

// Behavioral processing leveraging our behavioral context
func (s *OpinionatedGRPCServer) processBehavioralContext(ctx context.Context, event *opinionated.OpinionatedEvent) error {
	atomic.AddUint64(&s.behavioralEvents, 1)
	
	// Process entity fingerprint for behavior tracking
	if event.Behavioral.Entity != nil {
		s.correlationEngine.ProcessEntityBehavior(
			event.Behavioral.Entity.Id,
			event.Behavioral.Entity.Type,
			event.Behavioral.BehaviorDeviation,
			event.Behavioral.Entity.TrustScore,
		)
	}
	
	// Process behavior vector for ML correlation
	if len(event.Behavioral.BehaviorVector) > 0 {
		s.aiProcessor.ProcessBehaviorVector(event.Id, event.Behavioral.BehaviorVector)
	}
	
	// Detect significant behavior changes
	if event.Behavioral.BehaviorDeviation > s.config.CorrelationConfig.BehavioralAnomalyThreshold {
		s.correlationEngine.ProcessBehavioralAnomaly(event)
	}
	
	return nil
}

// Additional context processing methods would continue here...
// Each leveraging the specific intelligence built into our opinionated format

// Connection context for tracking opinionated data metrics
type ConnectionContext struct {
	ID              string
	StartTime       time.Time
	Stream          opinionated.OpinionatedEventsService_StreamOpinionatedEventsServer
	Context         context.Context
	
	// Opinionated data specific metrics
	SemanticEventsReceived   uint64
	BehavioralEventsReceived uint64
	TemporalEventsReceived   uint64
	AnomalyEventsReceived    uint64
	AIFeatureEventsReceived  uint64
	
	// Performance metrics for our efficient format
	AverageProcessingLatency time.Duration
	SemanticSimilarityHits   uint64
	BehavioralAnomalies      uint64
	TemporalCorrelations     uint64
	AIInsightsGenerated      uint64
}

// Helper methods for extracting intelligence from our opinionated format
func (s *OpinionatedGRPCServer) extractSemanticInsights(batch *opinionated.OpinionatedBatch) []*opinionated.SemanticInsight {
	// Implementation would extract semantic insights using our semantic context
	return []*opinionated.SemanticInsight{}
}

func (s *OpinionatedGRPCServer) detectBehavioralAnomalies(batch *opinionated.OpinionatedBatch) []*opinionated.BehavioralAnomaly {
	// Implementation would detect behavioral anomalies using our behavioral context
	return []*opinionated.BehavioralAnomaly{}
}

func (s *OpinionatedGRPCServer) generateCorrelationHints(batch *opinionated.OpinionatedBatch) []*opinionated.CorrelationHint {
	// Implementation would generate correlation hints using our correlation context
	return []*opinionated.CorrelationHint{}
}

func (s *OpinionatedGRPCServer) generateAIRecommendations(batch *opinionated.OpinionatedBatch) []*opinionated.AIRecommendation {
	// Implementation would generate AI recommendations using our AI features
	return []*opinionated.AIRecommendation{}
}

// updateContextMetrics tracks which contexts are being used
func (s *OpinionatedGRPCServer) updateContextMetrics(event *opinionated.OpinionatedEvent, connCtx *ConnectionContext) {
	if event.Semantic != nil {
		atomic.AddUint64(&connCtx.SemanticEventsReceived, 1)
	}
	if event.Behavioral != nil {
		atomic.AddUint64(&connCtx.BehavioralEventsReceived, 1)
	}
	if event.Temporal != nil {
		atomic.AddUint64(&connCtx.TemporalEventsReceived, 1)
	}
	if event.Anomaly != nil {
		atomic.AddUint64(&connCtx.AnomalyEventsReceived, 1)
	}
	if event.AiFeatures != nil {
		atomic.AddUint64(&connCtx.AIFeatureEventsReceived, 1)
	}
}

// generateConnectionID creates a unique connection identifier
func generateConnectionID() string {
	return fmt.Sprintf("conn-%d", time.Now().UnixNano())
}

// GetOpinionatedStats returns statistics specific to our data format
func (s *OpinionatedGRPCServer) GetOpinionatedStats() *OpinionatedStats {
	s.mu.RLock()
	defer s.mu.RUnlock()
	
	return &OpinionatedStats{
		SemanticEventsProcessed:   atomic.LoadUint64(&s.semanticEvents),
		BehavioralEventsProcessed: atomic.LoadUint64(&s.behavioralEvents),
		TemporalEventsProcessed:   atomic.LoadUint64(&s.temporalEvents),
		AnomalyEventsProcessed:    atomic.LoadUint64(&s.anomalyEvents),
		CorrelatedEventsProcessed: atomic.LoadUint64(&s.correlatedEvents),
		AIFeatureEventsProcessed:  atomic.LoadUint64(&s.aiFeatureEvents),
		
		ActiveConnections:         len(s.activeConnections),
		CorrelationEngineStats:    s.correlationEngine.GetStats(),
		PatternMatcherStats:       s.patternMatcher.GetStats(),
		AIProcessorStats:          s.aiProcessor.GetStats(),
		
		// Performance metrics specific to our optimized format
		AverageProcessingLatency:  s.monitor.GetAverageLatency(),
		SemanticSimilarityRate:    s.monitor.GetSemanticSimilarityRate(),
		BehavioralAnomalyRate:     s.monitor.GetBehavioralAnomalyRate(),
		TemporalCorrelationRate:   s.monitor.GetTemporalCorrelationRate(),
		AIInsightGenerationRate:   s.monitor.GetAIInsightRate(),
	}
}

// OpinionatedStats provides metrics specific to our perfect data format
type OpinionatedStats struct {
	// Context-specific event processing
	SemanticEventsProcessed   uint64 `json:"semantic_events_processed"`
	BehavioralEventsProcessed uint64 `json:"behavioral_events_processed"`
	TemporalEventsProcessed   uint64 `json:"temporal_events_processed"`
	AnomalyEventsProcessed    uint64 `json:"anomaly_events_processed"`
	CorrelatedEventsProcessed uint64 `json:"correlated_events_processed"`
	AIFeatureEventsProcessed  uint64 `json:"ai_feature_events_processed"`
	
	// Connection management
	ActiveConnections int `json:"active_connections"`
	
	// Component statistics
	CorrelationEngineStats interface{} `json:"correlation_engine_stats"`
	PatternMatcherStats    interface{} `json:"pattern_matcher_stats"`
	AIProcessorStats       interface{} `json:"ai_processor_stats"`
	
	// Performance metrics optimized for our format
	AverageProcessingLatency  time.Duration `json:"average_processing_latency"`
	SemanticSimilarityRate    float64       `json:"semantic_similarity_rate"`
	BehavioralAnomalyRate     float64       `json:"behavioral_anomaly_rate"`
	TemporalCorrelationRate   float64       `json:"temporal_correlation_rate"`
	AIInsightGenerationRate   float64       `json:"ai_insight_generation_rate"`
}